<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PhotoStudio Pro</string>
    <string name="app_tagline">محرر الصور الاحترافي</string>
    <string name="nav_home">الرئيسية</string>
    <string name="nav_templates">القوالب</string>
    <string name="nav_settings">الإعدادات</string>
    <string name="home_title">PhotoStudio Pro</string>
    <string name="home_subtitle">محرر الصور الاحترافي</string>
    <string name="action_open_image">فتح صورة</string>
    <string name="action_camera">الكاميرا</string>
    <string name="action_templates">القوالب الجاهزة</string>
    <string name="recent_edits">آخر التعديلات</string>
    <string name="no_recent_edits">لا توجد تعديلات حديثة</string>
    <string name="editor_title">محرر الصور</string>
    <string name="tab_filters">فلاتر</string>
    <string name="tab_adjust">تعديل</string>
    <string name="tab_text">نص</string>
    <string name="tab_stickers">ملصقات</string>
    <string name="tab_crop">اقتصاص</string>
    <string name="tab_templates">قوالب</string>
    <string name="filter_original">الأصلي</string>
    <string name="filter_warm">دافئ</string>
    <string name="filter_cool">بارد</string>
    <string name="filter_vintage">كلاسيكي</string>
    <string name="filter_bw">أبيض وأسود</string>
    <string name="filter_vivid">زاهي</string>
    <string name="filter_fade">باهت</string>
    <string name="filter_dramatic">درامي</string>
    <string name="filter_sepia">بني داكن</string>
    <string name="filter_noir">نوار</string>
    <string name="filter_sunset">غروب</string>
    <string name="filter_forest">غابة</string>
    <string name="adjust_brightness">السطوع</string>
    <string name="adjust_contrast">التباين</string>
    <string name="adjust_saturation">التشبع</string>
    <string name="adjust_warmth">الدفء</string>
    <string name="adjust_sharpness">الحدة</string>
    <string name="adjust_exposure">التعرض</string>
    <string name="adjust_vignette">تظليل الحواف</string>
    <string name="adjust_highlights">الإضاءات</string>
    <string name="adjust_shadows">الظلال</string>
    <string name="text_add">إضافة نص</string>
    <string name="text_edit_hint">اكتب نصك هنا</string>
    <string name="text_font">الخط</string>
    <string name="text_color">اللون</string>
    <string name="text_size">الحجم</string>
    <string name="text_align">المحاذاة</string>
    <string name="text_shadow">الظل</string>
    <string name="text_strike">خط تحت النص</string>
    <string name="text_background">خلفية النص</string>
    <string name="sticker_emoji">رموز تعبيرية</string>
    <string name="sticker_shapes">أشكال</string>
    <string name="sticker_decorations">زخارف</string>
    <string name="crop_free">حر</string>
    <string name="crop_square">مربع</string>
    <string name="crop_4_3">4:3</string>
    <string name="crop_3_4">3:4</string>
    <string name="crop_16_9">16:9</string>
    <string name="crop_9_16">9:16</string>
    <string name="crop_apply">تطبيق الاقتصاص</string>
    <string name="crop_rotate_left">تدوير يسار</string>
    <string name="crop_rotate_right">تدوير يمين</string>
    <string name="crop_flip_horizontal">قلب أفقي</string>
    <string name="crop_flip_vertical">قلب رأسي</string>
    <string name="action_save">حفظ</string>
    <string name="action_share">مشاركة</string>
    <string name="action_undo">تراجع</string>
    <string name="action_redo">إعادة</string>
    <string name="action_reset">إعادة تعيين</string>
    <string name="action_compare">مقارنة</string>
    <string name="action_done">تم</string>
    <string name="action_cancel">إلغاء</string>
    <string name="action_apply">تطبيق</string>
    <string name="msg_image_saved">تم حفظ الصورة بنجاح</string>
    <string name="msg_save_failed">فشل حفظ الصورة</string>
    <string name="msg_permission_required">الإذن مطلوب للوصول للصور</string>
    <string name="msg_no_image_selected">لم يتم اختيار صورة</string>
    <string name="msg_coming_soon">قريباً: هذه الميزة قيد التطوير</string>
    <string name="msg_loading">جاري التحميل…</string>
    <string name="msg_exporting">جاري التصدير…</string>
    <string name="settings_export_quality">جودة التصدير</string>
    <string name="settings_export_format">صيغة التصدير</string>
    <string name="settings_watermark">علامة مائية</string>
    <string name="settings_about">حول التطبيق</string>
    <string name="settings_rate">تقييم التطبيق</string>
    <string name="settings_share_app">مشاركة التطبيق</string>
    <string name="template_instagram_post">منشور انستغرام</string>
    <string name="template_instagram_story">قصة انستغرام</string>
    <string name="template_facebook_cover">غلاف فيسبوك</string>
    <string name="template_youtube_thumbnail">صورة يوتيوب</string>
    <string name="template_whatsapp_status">حالة واتساب</string>
    <string name="template_poster">ملصق</string>
    <string name="template_collage">تكوين صور</string>
</resources>
